# LibSpacey

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  conanfile.txt
android/gradle/wrapper/: gradle-wrapper.properties
android/libspaceywrapper/src/main/: AndroidManifest.xml
android/libspaceywrapper/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/scripts/: lint.sh  test.sh  validate.sh
common/: CMakeLists.txt
common/scripts/: build.sh  install-dependencies.sh  lint.sh  ship-it.sh  test.sh  validate.sh
common/src/: flashcard.cpp  flashcard.h  flashcardDefaults.h  flashcardGrader.cpp  flashcardGrader.h  gradeFlashcard.cpp  gradeFlashcard.h  main.cpp  srsengine.cpp  srsengine.h
common/test/: test_flashcard.cpp  test_flashcard_getters_setters.cpp  test_gradeFlashcard.cpp  test_srsengine.cpp
scripts/: build.sh  install-dependencies.sh  ship-it.sh  test.sh
scripts/shared/: shared.sh
src/: Flashcard.cpp  Flashcard.h  SrsEngine.cpp  SrsEngine.h  flashcard.cpp  flashcard.h  main.cpp  srsengine.cpp  srsengine.h
test/: test_flashcard_getters_setters.cpp  test_srsengine.cpp
typescript/: .eslintrc.json  .gitignore  package.json  tsconfig.json
typescript/scripts/: build-emscripten.sh  build-typescript.sh  build.sh  lint.sh  test.sh  validate.sh
typescript/src/: FlashcardBase.ts  LibSpaceyModuleWrapper.ts  LibSpaceyTypes.ts
typescript/src-emscripten/: flashcard-wrapper.cpp  libspacey-wrapper.cpp  libspacey.idl
typescript/src/__tests__/: gradeFlashcard.test.ts
xcode/LibSpacey/: FlashcardGrader.h  FlashcardGrader.mm  FlashcardGraderWrapper.mm  Grade.h  GradeableFlashcard.h  GradeableFlashcard.m  GradeableFlashcard.swift  LibSpacey.h  LibSpaceyFlashcard.h  LibSpaceyFlashcard.m
xcode/LibSpacey.xcodeproj/: project.pbxproj
xcode/LibSpacey.xcodeproj/project.xcworkspace/xcuserdata/walter.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/LibSpacey.xcodeproj/xcshareddata/xcschemes/: LibSpacey.xcscheme
xcode/LibSpaceyTests/: FlashcardGraderTests.swift  LibSpaceyTests-Bridging-Header.h  LibSpaceyTests.swift
xcode/scripts/: fix-xcode-mystery-crash.sh  lint.sh  test.sh  validate.sh
(+3 files in other folders)
